# TikuTypst

./: Cargo.toml  README.md  output.typ  page.json
json/: comp.json  dsl.typ  fb.json  judge.json  sc.json  subj.json  title.json
src/: document.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs
