[package]
name = "tiku-typst"
version = "0.1.0"
edition = "2024"
description = "Convert question-bank JSON into Typst DSL"

[lib]
name = "tiku_typst"

[[bin]]
name = "TikuTypst"
path = "src/main.rs"

[dependencies]
anyhow = "1"
html-escape = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
